privoxy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: privoxy
spec:
  finalizers:
  - kubernetes
