privoxy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: privoxy
  namespace: privoxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: privoxy
  template:
    metadata:
      labels:
        app: privoxy
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - privoxy
              topologyKey: kubernetes.io/hostname
      containers:
      - name: privoxy
        #image: vimagick/privoxy
        #image: gcr.io/m-lab-213307/mdona-privoxy 
        image: javisol/k8s-api-proxy:0.1
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8118
#        volumeMounts:
#          - name: user-action
#            mountPath: /etc/privoxy/user.action
#            subPath: user.action
#          - name: user-filter
#            mountPath: /etc/privoxy/user.filter
#            subPath: user.filter
#          - name: default-action
#            mountPath: /etc/privoxy/default.action
#            subPath: default.action
#          - name: default-filter
#            mountPath: /etc/privoxy/default.filter
#            subPath: default.filter
#          - name: config
#            mountPath: /etc/privoxy/config
#            subPath: config
#      volumes:
#        - name: user-action
#          configMap:
#            name: user-action
#        - name: user-filter
#          configMap:
#            name: user-filter
#        - name: default-filter
#          configMap:
#            name: default-filter
#        - name: default-action
#          configMap:
#            name: default-action
#        - name: config
#          configMap:
#            name: privoxy-config
