privoxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: privoxy
  namespace: privoxy
spec:
  ports:
  - port: 8118
  selector:
    app: privoxy
  #type: ClusterIP
  type: NodePort
  #type: LoadBalancer
