privoxy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: privoxy
  namespace: privoxy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
  - host: privoxy.kubi.web
    http:
      paths:
      - backend:
          serviceName: privoxy
          servicePort: 8118
